# duckfetch

./: Cargo.toml  LICENSE-MIT  README.md  dist-manifest.json  dist-workspace.toml
.github/workflows/: release.yml  rust.yml  test-linux-install.yml  test-macos-install.yml  test-windos-install.yml
src/: lib.rs  main.rs
src/duckfetch/: artifacts.rs  cli.rs  completion.rs  download.rs  extract.rs  install.rs  mod.rs  target.rs  url.rs  version.rs
src/duckup/: cli.rs  download.rs  extract.rs  install.rs  mod.rs  version.rs
