[package]
name = "duckfetch"
version = "0.3.2"
edition = "2021"
authors = ["Philippe Massicotte <pmassicotte@hotmail.com>"]
description = "A CLI tool for managing DuckDB installations, enabling users to easily list available versions and install specific ones."
license = "MIT OR Apache-2.0"
repository = "https://github.com/pmassicotte/duckfetch"
homepage = "https://github.com/pmassicotte/duckfetch"
documentation = "https://docs.rs/duckfetch"
readme = "README.md"
keywords = ["DuckDB", "database", "fetch", "CLI", "tool"]
categories = ["command-line-interface"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo"] }
clap_complete = "4.5.29"
dirs = "5"
inquire = "0.7"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
zip = "2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
