[package]
name = "duckfetch"
version = "0.5.0"
authors = ["Philippe Massicotte <pmassicotte@hotmail.com>"]
edition = "2021"
description = "A CLI tool for managing DuckDB installations, enabling users to easily list available versions and install specific ones."
documentation = "https://docs.rs/duckfetch"
readme = "README.md"
homepage = "https://github.com/pmassicotte/duckfetch"
repository = "https://github.com/pmassicotte/duckfetch"
license = "MIT OR Apache-2.0"
keywords = ["CLI", "DuckDB", "database", "fetch", "tool"]
categories = ["command-line-interface"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo", "color"] }
clap_complete = "4.5.29"
dirs = "6"
inquire = "0.7"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
webbrowser = "1.0.2"
zip = "4"

[profile.release]
opt-level = "z"
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
